# Copyright 2017 Opera Software AS. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
#
# gn variables necessary to make chromium build with icecc
#
# The settings assumes that ccache is used in combination with icecc.
# Import this file in the beginning of your args.gn file.
# out/Release/args.gn example:
#
# import("/path/to/icecc.gni")
# is_debug=false

use_debug_fission=false
clang_use_chrome_plugins=false
enable_nacl=false
linux_use_bundled_binutils=false
cc_wrapper="ccache"

# The following options avoid a clang #include_next bug:
# https://bugs.llvm.org/show_bug.cgi?id=26828
# enable_swiftshader=false will crash layout tests. If you don't need to run
# layout tests, you might consider disabling it. Otherwise you have to build
# the swiftshader target with ninja instead of icecc-ninja.

#enable_swiftshader=false
ffmpeg_use_atomics_fallback=true

# The following option avoids crashing protoc on startup.
# See https://crbug.com/772827
use_lld=false

